<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ButtonViewActivity">

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_1"
        app:cornerRadius="90dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_2"
        app:cornerRadius="90dp"
        app:icon="@drawable/ic_add"
        android:text="@string/btn_2"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_3"
        app:cornerRadius="90dp"
        android:text="@string/btn_3"
       app:icon="@drawable/ic_add"
        app:iconGravity="end"
        />
<com.google.android.material.button.MaterialButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:insetRight="0dp"
    android:insetLeft="0dp"
    android:insetBottom="0dp"
    android:insetTop="0dp"
    android:id="@+id/btn_4"
    android:text="@string/btn_4"
    />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_5"
        android:text="@string/btn_5"
        android:paddingLeft="5dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_6"
        android:text="@string/btn_6"
        android:paddingRight="5dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_7"
        android:text="@string/btn_7"
        app:rippleColor="@android:color/holo_blue_dark"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="90dp"
        app:strokeColor="@color/black"
        app:strokeWidth="6dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_8"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="@color/black"
        />


</androidx.appcompat.widget.LinearLayoutCompat>